--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "quill-mention",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "@mentions for the Quill rich text editor",
-  "homepage": "https://quill-mention.com/",
+  "homepage": "https://github.com/lumandra/quill-mention.git/",
   "main": "dist/quill.mention.csj.js",
   "module": "dist/quill.mention.esm.js",
-  "repository": "https://github.com/quill-mention/quill-mention.git",
-  "author": "Fredrik Sundqvist <fsundqvist@gmail.com>",
+  "repository": "https://github.com/lumandra/quill-mention.git",
+  "author": "Marina Pecherina <lumandra7@gmail.com>",
   "license": "MIT",
   "files": [
     "dist",
@@ -14,6 +14,7 @@
     "README.md"
   ],
   "dependencies": {
+    "postcss": "^8.4.24",
     "quill": "^1.3.7"
   },
   "devDependencies": {
