--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill-mention",
+  "name": "@lumandra/quill-mention",
   "version": "3.2.1",
   "description": "@mentions for the Quill rich text editor",
   "homepage": "https://github.com/lumandra/quill-mention.git/",
